# cppjump

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  start.sh
server/: CMakeLists.txt  Makefile  README.md
server/bench/: bench_json.cpp
server/src/: base64.hpp  json.hpp  main.cpp  sha1.hpp  websocket.hpp
web/: editor.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: generate_placeholder_assets.py
web/src/: main.ts  pixelScale.ts
web/src/editor/: EditorScene.ts  main.ts
web/src/game/: collision.ts  constants.ts  levelData.ts  player.ts  renderTiles.ts  tileDefinitions.ts  tilemap.ts  tilemapData.ts  touchControls.ts  types.ts  worldScreens.ts
web/src/net/: Network.ts
web/src/scenes/: GameScene.ts
